--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                     <input type="password" name="senha" placeholder="Senha">
             </div>
             <button class="btn-login">Login</button>
+            <a href="" class="passSenha">Esqueci a Senha</a>
+            <a href="" class="cadastro">Cadastre-Se</a>
         </div>
     </div>
 </body>
