--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <button class="btn-login">Login</button>
             <a href="" class="passSenha">Esqueci a Senha</a>
-            <a href="" class="cadastro">Cadastre-Se</a>
+            <a href="./cadastro/form.html" class="cadastro">Cadastre-Se</a>            
         </div>
     </div>
 </body>
